<resources>
    <string name="app_name">StockApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="india">INDIA</string>
    <string name="etf">ETF</string>
    <string name="company_name">Company Name</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="search_your_ticker">Search Your ticker</string>
    <string name="all">All</string>
    <string name="equity">Equity</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="apple_inc">APPLE INC</string>
    <string name="common_stock">Common Stock</string>
    <string name="_177_15">$177.15</string>
    <string name="about_apple_inc">About APPLE INC</string>
    <string name="apple_inc_is_an_american_multinational_technology_company">Apple Inc. is an American multinational technology company...</string>
    <string name="industry_electronic_computers">Industry: Electronic computers</string>
    <string name="sector_technology">Sector: Technology</string>
    <string name="stats">Stats</string>
    <string name="book_value">Book Value</string>
    <string name="dividendyield">DividendYield</string>
    <string name="_52weekhigh">52WeekHigh</string>
    <string name="_52weeklow">52WeekLow</string>
    <string name="_50daymovingaverage">50DayMovingAverage</string>
    <string name="_200daymovingaverage">200DayMovingAverage</string>
    <string name="take_a_look_what_s_ngoing_on_today">Take a look what’s \ngoing on today</string>
    <string name="no_results_found">No results found</string>
    <string name="Empty" />
</resources>